# prepare-release

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  action.yml  pyproject.toml
prepare_release/: changelog.py  prepare_release.py
scripts/: changelog.py  prepare_release.py
tests/: test_prepare_release.py
